# UltraMultiThread

./: .gitignore  CMakeLists.txt  README.md  umt-config.cmake
example/: CMakeLists.txt  example_message.cpp  example_obj_manager.cpp  example_python_export.cpp  example_python_export.py  example_sync.cpp  py_example.cpp  py_example.py  subscription.cpp
include/umt/: Message.hpp  ObjManager.hpp  Sync.hpp  named_obj.hpp  subscription.hpp  umt.hpp
